@@ -4,17 +4,22 @@ import com.intellij.ide.ui.customization.CustomActionsSchema;
 import com.intellij.openapi.actionSystem.ActionGroup;
 import com.intellij.openapi.actionSystem.impl.ActionToolbarImpl;
 import com.intellij.openapi.editor.impl.EditorComponentImpl;
+import com.intellij.openapi.fileEditor.FileEditorManager;
 import com.intellij.openapi.fileEditor.OpenFileDescriptor;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.wm.ToolWindowManager;
+import fi.aalto.cs.apluscourses.model.task.Arguments;
 import java.awt.Component;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 public class ComponentDatabase {
+  public static final String PROJECT_TOOL_WINDOW = "Project";
+  public static final String APLUS_TOOL_WINDOW = "A+ Courses";
+  public static final String RUN_TOOL_WINDOW = "Run";
+
   public static @Nullable Component getProjectPane() {
     Component component = ComponentLocator.getComponentByClass("ProjectViewPane");
     return component == null ? null : component.getParent();
@@ -66,10 +71,10 @@ public class ComponentDatabase {
    * Opens a file in the editor, return true if successful.
    */
   public static boolean showFile(@NotNull String path, @NotNull Project project) {
-    if (project.getBasePath() == null) {
+    if (project.getBasePath() == null || project.isDisposed()) {
       return false;
     }
-    var modulePath = Paths.get(project.getBasePath()).resolve(path);
+    var modulePath = Path.of(project.getBasePath(), path);
     var vf = LocalFileSystem.getInstance().findFileByIoFile(modulePath.toFile());
     if (vf == null) {
       return false;
@@ -78,19 +83,50 @@ public class ComponentDatabase {
     return true;
   }
 
-  public static boolean showProjectToolWindow(@NotNull Project project) {
-    return showToolWindow("Project", project);
-  }
-
-  public static boolean showAPlusToolWindow(@NotNull Project project) {
-    return showToolWindow("A+ Courses", project);
-  }
-
-  private static boolean showToolWindow(@NotNull String id, @NotNull Project project) {
+  /**
+   * Opens a tool window.
+   * @param id      The name of the tool window
+   * @param project The project
+   */
+  public static boolean showToolWindow(@NotNull String id, @NotNull Project project) {
     var toolWindow = ToolWindowManager.getInstance(project).getToolWindow(id);
     if (toolWindow != null) {
       try {
         toolWindow.activate(null);
+        return true;
+      } catch (IllegalStateException e) {
+        return false;
+      }
+    }
+    return false;
+  }
+
+  /**
+   * Closes file in the editor for a given project.
+   */
+  public static void closeFile(@NotNull Arguments actionArguments, @NotNull Project project) {
+    var filePath = (String) actionArguments.opt("filePath");
+    if (filePath == null) {
+      return;
+    }
+    var modulePath = Path.of(project.getBasePath(), filePath);
+    var vf = LocalFileSystem.getInstance().findFileByIoFile(modulePath.toFile());
+    if (vf == null) {
+      return;
+    }
+    FileEditorManager.getInstance(project).closeFile(vf);
+  }
+
+  /**
+   * Closes a tool window.
+   * @param id      The name of the tool window
+   * @param project The project
+   */
+  public static boolean hideToolWindow(@NotNull String id, @NotNull Project project) {
+    var toolWindow = ToolWindowManager.getInstance(project).getToolWindow(id);
+    if (toolWindow != null) {
+      try {
+        toolWindow.hide();
         return true;
       } catch (IllegalStateException e) {
         return false;
